# iscc-specs

./: .editorconfig  .gitignore  .travis.yml  404.html  AUTHORS  CNAME  LICENSE  MANIFEST.in  README.md  README.rst  build.py  index.html  mkdocs.yml  pyproject.toml  requirements.txt  setup.py  sitemap.xml  stamp.py
.github/: FUNDING.yml
.github/workflows/: test.yml
concept/: index.html
contributing/: index.html
docs/: CNAME  concept.md  features.md  implementations.md  index.md  license.md  resources.md  specification.md
docs/stylesheets/: custom.css
features/: index.html
implementations/: index.html
iscc/: __init__.py  api.py  app_dir.py  audio.py  bin.py  cdc.pxd  cdc.py  cli.py  codec.py  compute.py  const.py  core.py  core.pyi  data.py  detect.py  distance.py  ffprobe.py  image.py  index.py  iscc.py  iscc.pyi  jcs.py  jldloader.py  match.py  mediatype.py  meta.py  metrics.py  minhash.pxd  minhash.py  mp7.py  options.py  params.py  schema.py  simhash.py  text.py  tika-server-1.25.jar.REMOVED.git-id  tika-server-1.25.jar.md5  uread.py  utils.py  video.py  (+2 more)
iscc/jcs/: __init__.py  canonicalize.py
license/: index.html
mkdocs/: search_index.json
overrides/partials/integrations/analytics/: custom.html
resources/: index.html
search/: search_index.json
specification/: index.html
src/iscc/: __init__.py  cdc.py  const.py  iscc.py  iscc.pyi  merkle.py  params.py  slide.py
stylesheets/: custom.css
tests/: .gitignore  __init__.py  build_test_data.py  ffmpeg_signature.xml  test.3gp  test_audio.py  test_bin.py  test_cdc.py  test_code_content.py  test_code_data.py  test_code_instance.py  test_code_iscc.py  test_code_iscc_id.py  test_code_meta.py  test_codec.py  test_compute.py  test_core.py  test_core_code_data.py  test_core_code_instance.py  test_data.json  test_data.py  test_data_id.py  test_detect.py  test_ffprobe.py  test_image.py  test_index.py  test_inputs.json  test_inputs.yaml  test_instance_id.py  test_iscc.py  test_jcs.py  test_jsc.py  test_match.py  test_mediatypes.py  test_merkle.py  test_meta.py  test_metrics.py  test_minhash.py  test_mp7.py  test_readables.py  (+9 more)
tools/: bench.py  convert.py  create_setup.py  stamp.py
