[tool.poetry]
name = "iscc"
version = "1.1.0-beta.5"
build = "build.py"
description = "ISCC: Reference Implementation"
authors = ["Titusz Pan <tp@py7.de>"]
license="BSD 2-clause"
readme = "README.md"
homepage = "https://iscc.codes/"
repository = "https://github.com/iscc/iscc-specs"
keywords=["iscc", "identifier", "media", "content", "hash", "blockchain", "similarity"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.scripts]
igen = 'iscc.cli:app'

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
importlib-metadata = {version = "^1.0", python = "<3.8"}
xxhash = "^2.0.0"
Pillow = "^8.2.0"
blake3 = "^0.1.8"
cython = { version = "^0.29.22", optional = true }
more-itertools = "^8.7.0"
bitarray-hardbyte = "^1.6.2"
numpy = "1.19.3"
numba = { version = "0.53.1", python = ">=3.6,<3.10", optional = true}
loguru = "^0.5.3"
imageio-ffmpeg = "^0.4.3"
pydantic = "^1.8.1"
scenedetect = {extras = ["opencv-headless"], version = "^0.5.5"}
av = "^8.0.3"
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32' or sys_platform == 'darwin'" }
python-magic = { version = "^0.4.22", markers = "sys_platform == 'linux'" }
tika = "^1.24"
langcodes = "^3.1.0"
langdetect = "^1.0.8"
pyexiv2 = "^2.5.0"
requests = "^2.25.1"
humanize = "^3.3.0"
typer = "^0.3.2"
codetiming = "^1.3.0"
bidict = "^0.21.2"
PyLD = "^2.0.3"
python-dotenv = "^0.16.0"
lmdb = "^1.1.1"
msgpack = "^1.0.2"
annoy = "^1.17.0"

[tool.poetry.extras]
turbo = ["cython", "numba"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mkdocs-material = "^7.1.0"
mkdocs-redirects = "^1.0.1"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^0.8"
black = { version = "*", allow-prereleases = true }
lxml = "^4.6.3"
fauxfactory = "^3.1.0"
iscc-samples = "^0.4.0"

[build-system]
requires = ["poetry>=1.1.0", "setuptools", "wheel", "cython"]
build-backend = "poetry.masonry.api"
