[tool.poetry]
name = "iscc"
version = "1.1.0-beta.9"
description = "ISCC: Reference Implementation"
authors = ["Titusz Pan <tp@py7.de>"]
license="BSD 2-clause"
readme = "README.md"
homepage = "https://iscc.codes/"
repository = "https://github.com/iscc/iscc-specs"
keywords=["iscc", "identifier", "media", "content", "hash", "blockchain", "similarity"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
numpy = "1.19.3"
numba = { version = "0.53.1", python = ">=3.6,<3.10", optional = true }
loguru = "<0.6"
scenedetect = { version = "^0.5.5", optional = true}
av = "^8.0.3"
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32' or sys_platform == 'darwin'" }
python-magic = { version = "^0.4.22", markers = "sys_platform == 'linux'" }
tika = "^1.24"
langcodes = "^3.1.0"
langdetect = "^1.0.8"
pyexiv2 = "2.6.4"  # 2.7.0 currently fails extracting title from sample files
requests = "^2.25.1"
humanize = "^3.3.0"
codetiming = "^1.3.0"
bidict = "^0.21.2"
PyLD = "^2.0.3"
python-dotenv = "^0.16.0"
lmdb = "^1.1.1"
msgpack = "^1.0.2"
annoy = "^1.17.0"
jmespath = "^0.10.0"
opencv-contrib-python-headless = { version = "^4.5.1", optional = true }
mobi = "^0.3.1"
iscc-core = "^0.1"

[tool.poetry.extras]
turbo = ["cython", "numba", "pybase64"]
optional = ["opencv-contrib-python-headless", "scenedetect"]

[tool.poetry.dev-dependencies]
pytest = "^6.2.3"
mkdocs-material = "^7.1.0"
mkdocs-redirects = "^1.0.1"
mkdocs-minify-plugin = "^0.4.0"
mkdocs-git-revision-date-localized-plugin = "^0.8"
black = { version = "*", allow-prereleases = true }
lxml = "^4.6.3"
fauxfactory = "^3.1.0"
iscc-samples = "^0.4.0"

[build-system]
requires = ["poetry==1.1.5", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
