[tool.poetry]
name = "iscc"
version = "1.1.0-beta.12"
description = "ISCC: Reference Implementation"
authors = ["Titusz Pan <tp@py7.de>"]
license="BSD 2-clause"
readme = "README.md"
homepage = "https://iscc.codes/"
repository = "https://github.com/iscc/iscc-specs"
keywords=["iscc", "identifier", "media", "content", "hash", "blockchain", "similarity"]
classifiers=[
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]

[tool.poetry.dependencies]
python = ">=3.6.1,<3.10"
numpy = "1.19.3"
loguru = "<0.6"
scenedetect = { version = "^0.5.5", optional = true}
python-magic-bin = { version = "^0.4.14", markers = "sys_platform == 'win32' or sys_platform == 'darwin'" }
python-magic = { version = "^0.4.22", markers = "sys_platform == 'linux'" }
tika = "^1.24"
langcodes = "^3.3"
langdetect = "^1.0.9"
pyexiv2 = "2.7.1"
requests = "^2.26"
humanize = "^3.12"
codetiming = "^1.3"
bidict = "^0.21"
python-dotenv = "^0.19"
lmdb = "^1.2"
msgpack = "^1.0"
annoy = "^1.17"
jmespath = "^0.10"
opencv-contrib-python-headless = { version = "^4.5", optional = true }
mobi = "^0.3"
iscc-core = "^0.1"
Pillow = "^8.4.0"
tinytag = "^1.6.0"

[tool.poetry.extras]
turbo = ["cython", "pybase64"]
optional = ["opencv-contrib-python-headless", "scenedetect"]

[tool.poetry.dev-dependencies]
pytest = "^6.2"
mkdocs-material = "^8.0"
mkdocs-redirects = "^1.0"
mkdocs-minify-plugin = "^0.5"
mkdocs-git-revision-date-localized-plugin = "^0.10"
black = { version = "*", allow-prereleases = true }
lxml = "^4.6"
fauxfactory = "^3.1"
iscc-samples = "^0.4"

[build-system]
requires = ["poetry==1.1.5", "setuptools", "wheel"]
build-backend = "poetry.masonry.api"
